Add Posts, Likes, Comments and update profile

--- a/website-skeleton/config/routes.yaml
+++ b/website-skeleton/config/routes.yaml
@@ -3,6 +3,5 @@ controllers:
     type: attribute
 
 index:
-    path: /test
-    # the controller value has the format 'controller_class::method_name'
+    path: /
     controller: App\Controller\TestController::index
